--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,14 +7,14 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Tan Dao
+    tagline: Backend Developer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
+    email: daominh.tan93@gmail.com
+    phone: (+84) 384393 131
+    website: daominhtan.github.io/online-cv #do not add http://
     linkedin: alandoe
     xing: alandoe
     github: sharu725
@@ -28,23 +28,23 @@ sidebar:
     pdf: http://www.africau.edu/images/default/sample.pdf
 
     languages:
-      - idiom: English
+      - idiom: Vietnamese
         level: Native
 
       - idiom: French
-        level: Professional
+        level: Intermediate
 
-      - idiom: Spanish
-        level: Professional
+      # - idiom: Spanish
+      #   level: Professional
 
     interests:
-      - item: Climbing
+      - item: Walking
         link:
 
-      - item: Snowboarding
+      - item: Swiming
         link:
 
-      - item: Cooking
+      - item: Gamming
         link:
 
 career-profile:
