--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,11 +13,11 @@ sidebar:
 
     # Sidebar links
     email: daominh.tan93@gmail.com
-    phone: (+84) 384393 131
+    phone: (+84) 384 393 131
     # website: daominhtan.github.io/online-cv #do not add http://
-    linkedin: linkedin.com/in/daominhtan
+    linkedin: daominhtan
     # xing: alandoe
-    github: https://github.com/daominhtan
+    github: daominhtan
     # telegram: # add your nickname without '@' sign
     # gitlab:
     bitbucket:
