--- a/_data/data.yml
+++ b/_data/data.yml
@@ -47,16 +47,15 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      -	2+ years of experience in Golang developer
+      -	3+ years of experience in Java develper
+      -	Experience in programming languages React JS, Native
+      -	Strong at software design, troubleshoot
+      -	Familiar with Agile and Scrum methodology
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+    - degree: Bachelor of Software Engineering
+      university: CAN THO UNIVERSITY 
+      time: 2012 - 2016
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
