--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,175 +3,176 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
-    education: True # set to False if you want education in main section instead of in sidebar
+  about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+  education: True # set to False if you want education in main section instead of in sidebar
 
-    # Profile information
-    name: Tan Dao
-    tagline: Backend Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+  # Profile information
+  name: Tan Dao
+  tagline: Backend Developer
+  avatar: profile.png #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
-    # Sidebar links
-    email: daominh.tan93@gmail.com
-    phone: (+84) 384 393 131
-    # website: daominhtan.github.io/online-cv #do not add http://
-    linkedin: daominhtan
-    # xing: alandoe
-    github: daominhtan
-    # telegram: # add your nickname without '@' sign
-    # gitlab:
-    bitbucket:
-    # twitter: '@webjeda'
-    # stack-overflow: # Number/Username, e.g. 123456/alandoe
-    # codewars:
-    # goodreads: # Number-Username, e.g. 123456-alandoe
-    # pdf: http://www.africau.edu/images/default/sample.pdf
+  # Sidebar links
+  email: daominh.tan93@gmail.com
+  phone: (+84) 384 393 131
+  # website: daominhtan.github.io/online-cv #do not add http://
+  linkedin: daominhtan
+  # xing: alandoe
+  github: daominhtan
+  # telegram: # add your nickname without '@' sign
+  # gitlab:
+  bitbucket:
+  # twitter: '@webjeda'
+  # stack-overflow: # Number/Username, e.g. 123456/alandoe
+  # codewars:
+  # goodreads: # Number-Username, e.g. 123456-alandoe
+  # pdf: http://www.africau.edu/images/default/sample.pdf
 
-    languages:
-      - idiom: Vietnamese
-        level: Native
+  languages:
+    - idiom: Vietnamese
+      level: Native
 
-      - idiom: English
-        level: Intermediate
+    - idiom: English
+      level: Intermediate
 
-    interests:
-      - item: Walking
-        link:
+  interests:
+    - item: Walking
+      link:
 
-      - item: Swiming
-        link:
+    - item: Swiming
+      link:
 
-      - item: Gamming
-        link:
+    - item: Gamming
+      link:
 
 career-profile:
-    title: Career Profile
-    summary: |
-      -	2+ years of experience in Golang developer
-      -	3+ years of experience in Java develper
-      -	Experience in programming languages React JS, Native
-      -	Strong at software design, troubleshoot
-      -	Familiar with Agile and Scrum methodology
+  title: Career Profile
+  summary: |
+    -	3.5+ years of experience in Golang developer
+    -	3+ years of experience in Java develper
+    -	Experience in programming languages React JS, React Native
+    -	Strong at software design, troubleshoot
+    -	Familiar with Agile and Scrum methodology
 education:
-    - degree: Bachelor of Software Engineering
-      university: CAN THO UNIVERSITY 
-      time: 2012 - 2016
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - degree: Certificate of Global Software Talent
-      university: FPT Software training cource
-      time: Jul 2015
-      details: |
-        Describe your study here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
-          - Bullet point
-          - Bullet point
+  - degree: Bachelor of Software Engineering
+    university: CAN THO UNIVERSITY
+    time: 2012 - 2016
+    details: |
+      Describe your study
+  - degree: Holcim Prize
+    university: HUTECH University
+    time: Jun 2016
+    details: |
+      Describe your study
+  - degree: Certificate of Global Software Talent
+    university: FPT Software training course
+    time: Jul 2015
+    details: |
+      Describe your study
+  - degree: Participate ACM-ICPC 2014
+    university: Nong Lam University
+    time: Oct 2014
+    details: |
+      ICPC (International Collegiate Programming Contest) is an algorithmic programming contest for 
+      college students. Teams of three, representing their university, work to solve the most 
+      real-world problems, fostering collaboration, creativity, innovation, and the ability to 
+      perform under pressure
 experiences:
-    - role: Golang Backend Developer
-      time: 2019 - Present
-      company: VNG Corporation (Zion - ZaloPay)
-      details: |
-        ZaloPay is a mobile payment application built on top of Zalo.
-        There are more than 100 million users worldwide use ZaloPay to transfer money and make payments.
-        My role and responsibility is build the backend services help to make payments and mornitor the orders system.
-    - role: Java Backend Developer
-      time: 2018 - 2019
-      company: VNG Corporation (Data Platform)
-      details: |
-        VNG is a leading internet technology company in Vietnam and 
-        famous for Zalo, ZaloPay, Zing, Cloud,... and especialy Game publisher in the Vietnamese market.
-        The data that comes in every day is really huge.
-        My role is to analyze, write parsing scripts for each log type and store them into the warehouse supporting many purposes.
-    - role: Java Backend Developer
-      time: 2016 - 2018
-      company: TMA Solution
-      details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
+  - role: Golang Backend Developer
+    time: 2019 - Present
+    company: VNG Corporation (Zion - ZaloPay)
+    details: |
+      ZaloPay is a mobile payment application built on top of Zalo.
+      There are more than 100 million users worldwide use ZaloPay to transfer money and make payments.
+      My role and responsibility is build the backend services help to make payments and mornitor the orders system.
+  - role: Java Backend Developer
+    time: 2018 - 2019
+    company: VNG Corporation (Data Platform)
+    details: |
+      VNG is a leading internet technology company in Vietnam and 
+      famous for Zalo, ZaloPay, Zing, Cloud,... and especialy Game publisher in the Vietnamese market.
+      The data that comes in every day is really huge.
+      My role is to analyze, write parsing scripts for each log type and store them into the warehouse supporting many purposes.
+  - role: Java Backend Developer
+    time: 2016 - 2018
+    company: TMA Solution
+    details: |
+      Describe your role here lorem ipsum dolor sit amet, consectetuer
+      adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+      Cum sociis natoque penatibus et magnis dis parturient montes,
+      nascetur ridiculus mus. Donec quam felis, ultricies nec,
+      pellentesque eu, pretium quis, sem.
+        - Bullet point
+        - Bullet point
 projects:
-    title: Projects
-    intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+  title: Projects
+  intro: >
+    You can list your side projects or open source libraries in this
+    section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+  assignments:
+    - title: Velocity
+      link: "#hook"
+      tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+    - title: DevStudio
+      link: "#"
+      tagline: "A responsive website template designed to help web developers/designers market their services."
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
+    - title: Tempo
+      link: "#"
+      tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
 
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
+    - title: Atom
+      link: "#"
+      tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
 
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+    - title: Delta
+      link: "#"
+      tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
-    papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
+  title: Publications
+  intro: |
+    You can list your publications in this section. Lorem ipsum dolor sit
+    amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
+    bibendum fringilla a eu lectus.
+  papers:
+    - title: The Art of Computer Programming
+      link: "#"
+      authors: Donald E. Knuth
+      conference: Addison-Wesley, 1968
 
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
+    - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
+      link: "#"
+      authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
+      conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
 
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+    - title: A syntax directed compiler for Algol 60
+      link: "#"
+      authors: Edgar T. Irons
+      conference: "Comm. ACM 4 (1961), 51–55"
 
 skills:
-    title: Skills &amp; Proficiency
+  title: Skills &amp; Proficiency
 
-    toolset:
-      - name: Python & Django
-        level: 98%
+  toolset:
+    - name: Python & Django
+      level: 98%
 
-      - name: Javascript & jQuery
-        level: 98%
+    - name: Javascript & jQuery
+      level: 98%
 
-      - name: Angular
-        level: 98%
+    - name: Angular
+      level: 98%
 
-      - name: HTML5 & CSS
-        level: 95%
+    - name: HTML5 & CSS
+      level: 95%
 
-      - name: Ruby on Rails
-        level: 85%
+    - name: Ruby on Rails
+      level: 85%
 
-      - name: Sketch & Photoshop
-        level: 60%
+    - name: Sketch & Photoshop
+      level: 60%
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+  Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
