Update company logo

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -80,7 +80,7 @@ experiences:
   - role: Golang Backend Developer
     time: 2019 - Present
     company: VNG Corporation (Zion - ZaloPay)
-    logo: zalopay-logo.jpeg
+    logo: zalopay-logo-2.png
     details: |
       ZaloPay is a mobile payment application built on top of Zalo.
       There are more than 100 million users worldwide use ZaloPay to transfer money and make payments.
