Update company logo

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -88,7 +88,7 @@ experiences:
       My role and responsibility is build the backend services help to make payments and mornitor the orders system.
   - role: Java Backend Developer
     time: 2018 - 2019
-    company: VNG Corporation (Data Platform)
+    company: VNG Corporation (Data Platform Team)
     logo: vng-logo-2.jpeg
     logo-class: pdr-10
     details: |
