--- a/_data/data.yml
+++ b/_data/data.yml
@@ -85,8 +85,10 @@ experiences:
     details: |
       ZaloPay is a mobile payment application built on top of Zalo.
       There are more than 100 million users worldwide use ZaloPay to transfer money and make payments.
-        - My role and responsibility is build the backend services help to make payments and monitor the system.
-        - Work with:
+      My roles and responsibility are:
+        - BE developer build services to process payments and monitor the system.
+        - BE, FE developer Deploy tools/applications to support customers and internal teams.
+      Work with: Golang, Gin-gonic, gRPC, TiDB, ETCD, K8s, ReactJs, Nextjs,...
   - role: Java Backend Developer
     time: 2018 - 2019
     company: VNG Corporation (Data Platform Team)
@@ -96,20 +98,21 @@ experiences:
       VNG is a leading internet technology company in Vietnam and 
       famous for Zalo, ZaloPay, Zing, Cloud,... and especialy Game publisher in the Vietnamese market.
       The data that comes in every day is really huge.
-      My role is to analyze, write parsing scripts for each log type and store them into the warehouse supporting many purposes.
+      My role are:
+        - ETL: Analyze, write parsing scripts for each log type store them into the warehouse supporting many purposes.
+        - BE, FE developer for tools related to data platform team
+      Work with:: Java, Spring Boost, Pig Script, superset, spark, HDFS,...
   - role: Java Backend Developer
     time: 2016 - 2018
     company: TMA Solution (OmniVista Team)
     logo: tma-logo.jpeg
     logo-class: pdr-10
     details: |
-      Describe your role here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-      Cum sociis natoque penatibus et magnis dis parturient montes,
-      nascetur ridiculus mus. Donec quam felis, ultricies nec,
-      pellentesque eu, pretium quis, sem.
-        - Bullet point
-        - Bullet point
+      TMA Solutions is one of the largest software outsourcing companies in Vietnam. It outsourcing services to different businesses such as 
+      Telecom, Finance & Insurance, etc.
+      My role are:
+        - Java Backend for application managing the network devices.
+      Work with:: Java, Spring Boost, RestAPI, mongoDB
 # projects:
 #   title: Projects
 #   intro: >
@@ -168,6 +171,9 @@ skills:
 
     - name: Java
       level: 90%
+
+    - name: K8s, Docker
+      level: 82%
 
     - name: SQL, NoSQL
       level: 80%
