--- a/_data/data.yml
+++ b/_data/data.yml
@@ -25,7 +25,7 @@ sidebar:
   # stack-overflow: # Number/Username, e.g. 123456/alandoe
   # codewars:
   # goodreads: # Number-Username, e.g. 123456-alandoe
-  pdf: http://www.africau.edu/images/default/sample.pdf
+  pdf: https://github.com/daominhtan/online-cv/blob/gh-pages/assets/pdf/tancv-final.pdf
 
   languages:
     - idiom: Vietnamese
