--- a/_data/data.yml
+++ b/_data/data.yml
@@ -47,8 +47,8 @@ sidebar:
 career-profile:
   title: Career Profile
   summary: |
-    -	3.5+ years of experience in Golang developer
-    -	3+ years of experience in Java develper
+    -	4+ years of experience in Golang developer
+    -	3.5+ years of experience in Java develper
     -	Experience in programming languages React JS, React Native
     -	Strong at software design, troubleshoot
     -	Familiar with Agile and Scrum methodology
@@ -77,11 +77,24 @@ education:
       real-world problems, fostering collaboration, creativity, innovation, and the ability to 
       perform under pressure
 experiences:
-  - role: Golang Backend Developer
-    time: 2019 - Present
+  - role: Senior Java Backend Developer
+    time: 2024 - Present
+    company: Cherry Solution (Cherry Solution Vietnam Team)
+    logo: cherry-logo.png
+    logo-class: pdr-10 pd-6
+    website: https://cherry-solutions.com
+    details: |
+      Cherry Solution Company is a global software development firm specializing in providing custom IT solutions and consulting services to various industries.
+      The company emphasizes efficiency, security in its solutions, catering to different industries such as financial services, manufacturing, logistics, and public policy.
+      My roles and responsibility are:
+        - BE developer: build the system and implement APIs for managing information, calculating, estimating from the collected data.
+        - Work with: Java, Spring Boot, GCP, AWS, Docker, Postgres, ...
+  - role: Senior Golang Backend Developer
+    time: 2019 - 2024
     company: Zion (ZaloPay Team)
     logo: zalopay-logo-2.png
     logo-class: pdr-10 pd-6
+    website: https://zalopay.vn
     details: |
       ZaloPay is a mobile payment application built on top of Zalo.
       There are more than 100 million users worldwide use ZaloPay to transfer money and make payments.
@@ -94,6 +107,7 @@ experiences:
     company: VNG Corporation (Data Platform Team)
     logo: vng-logo-2.jpeg
     logo-class: pdr-10
+    website: https://www.vng.com.vn
     details: |
       VNG is a leading internet technology company in Vietnam and 
       famous for Zalo, ZaloPay, Zing, Cloud,... and especialy Game publisher in the Vietnamese market.
@@ -107,6 +121,7 @@ experiences:
     company: TMA Solution (OmniVista Team)
     logo: tma-logo.jpeg
     logo-class: pdr-10
+    website: https://www.tma.vn
     details: |
       TMA Solutions is one of the largest software outsourcing companies in Vietnam. It outsourcing services to different businesses such as 
       Telecom, Finance & Insurance, etc.
