--- a/_data/data.yml
+++ b/_data/data.yml
@@ -133,10 +133,13 @@ projects:
   intro: >
     Beside working time on company, I love to build tools, applications.
   assignments:
-    - title: x-hosp
+    - title: XSolar
+      tagline: "Offers comprehensive solar panel systems for homeowners, enabling customers to generate clean energy and reduce their reliance on traditional power sources... (10+ members, Golang, Gin-gonic, TiDB, Docker, )"
+
+    - title: X-hosp
       tagline: "Services, Mobile app to manage information of customers, doctors, appointments... (4 members, Golang, Gin-gonic, gRPC, Postgres, React Native, K8s)"
 
-    - title: mshop
+    - title: Mshop
       tagline: "An application managing stocks, items for a mini shop (2 members with Java, MongoDB, ReactJs, Docker)"
 
 # publications:
