--- a/_data/data.yml
+++ b/_data/data.yml
@@ -84,7 +84,7 @@ experiences:
     logo-class: pdr-10 pd-6
     website: https://cherry-solutions.com
     details: |
-      Cherry Solution Company is a global software development firm specializing in providing custom IT solutions and consulting services to various industries.
+      Cherry Solution Company is a global software development firm specializing in providing custom IT solutions and consulting services.
       The company emphasizes efficiency, security in its solutions, catering to different industries such as financial services, manufacturing, logistics, and public policy.
       My roles and responsibility are:
         - BE developer: build the system and implement APIs for managing information, calculating, estimating from the collected data.
