--- a/_data/data.yml
+++ b/_data/data.yml
@@ -183,7 +183,7 @@ skills:
     - name: ReactJS, JavaScript
       level: 80%
 
-    - name: HTML5 & CSS
+    - name: HTML & CSS
       level: 85%
 
     - name: RestAPI, gRPC
