--- a/_data/data.yml
+++ b/_data/data.yml
@@ -101,7 +101,7 @@ experiences:
       My roles and responsibility are:
         - BE developer build services to process payments and monitor the system.
         - BE, FE developer Deploy tools/applications to support customers and internal teams.
-        - Work with: Golang, Gin-gonic, gRPC, TiDB, ETCD, K8s, ReactJs, Nextjs,...
+        - Work with: Golang, Gin-gonic, Kafka, gRPC, TiDB, ETCD, K8s, ReactJs, Nextjs,… 
   - role: Java Backend Developer
     time: 2018 - 2019
     company: VNG Corporation (Data Platform Team)
@@ -134,8 +134,7 @@ projects:
     Beside working time on company, I love to build tools, applications.
   assignments:
     - title: XSolar
-      tagline: "Offers comprehensive solar panel systems for homeowners, enabling customers to generate clean energy and reduce their reliance on traditional power sources... (10+ members, Golang, Gin-gonic, TiDB, Docker, )"
-
+      tagline: " Offers comprehensive solar panel systems for homeowners, enabling customers to generate clean energy and reduce their reliance on traditional power sources... (10+ members, Golang, Gin-gonic, TiDB, Docker, IoT,  MQTT,… ) "
     - title: X-hosp
       tagline: "Services, Mobile app to manage information of customers, doctors, appointments... (4 members, Golang, Gin-gonic, gRPC, Postgres, React Native, K8s)"
 
